# backend/internal/server/models/upload_track_d_t_o.go
@@ -1,0 +1,122 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// UploadTrackDTO upload track d t o
+//
+// swagger:model UploadTrackDTO
+type UploadTrackDTO struct {
+
+	// duration
+	// Required: true
+	Duration *uint64 `json:"duration"`
+
+	// genre
+	// Required: true
+	Genre *string `json:"genre"`
+
+	// title
+	// Required: true
+	Title *string `json:"title"`
+
+	// type
+	// Required: true
+	Type *string `json:"type"`
+}
+
+// Validate validates this upload track d t o
+func (m *UploadTrackDTO) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateDuration(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateGenre(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateTitle(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateType(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *UploadTrackDTO) validateDuration(formats strfmt.Registry) error {
+
+	if err := validate.Required("duration", "body", m.Duration); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *UploadTrackDTO) validateGenre(formats strfmt.Registry) error {
+
+	if err := validate.Required("genre", "body", m.Genre); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *UploadTrackDTO) validateTitle(formats strfmt.Registry) error {
+
+	if err := validate.Required("title", "body", m.Title); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *UploadTrackDTO) validateType(formats strfmt.Registry) error {
+
+	if err := validate.Required("type", "body", m.Type); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this upload track d t o based on context it is used
+func (m *UploadTrackDTO) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *UploadTrackDTO) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *UploadTrackDTO) UnmarshalBinary(b []byte) error {
+	var res UploadTrackDTO
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
